# aicc-voice-agent

./: .env.example  .gitignore  README.md  aicc_scenario_sample.xlsx  pyproject.toml  run.py
app/: aicc_runtime.py
app/cc_tools/: __init__.py
app/cc_tools/phone/: phone_tools.py
app/cc_web_interface/: __init__.py  server.py
app/cc_web_interface/admin_aicc/: call_classifier.py  call_log_db.py  callback_db.py  callback_dispatcher.py  config.py  routes.py  scenario_loader.py  sms_sender.py
app/cc_web_interface/playground/: __init__.py  routes.py
app/cc_web_interface/static/: admin_aicc.html  playground.html
app/cc_web_interface/voice_chat/: routes_clawops.py
app/config/: settings.py
